Ran Cleanup. Time taken in seconds: 2116